--- a/cfp.html
+++ b/cfp.html
@@ -1657,6 +1657,12 @@
                                             Venue
                                         </a>
                                     </li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction.html"
+                                            >
+                                            Author Instructions
+                                        </a>
+                                    </li>
 								</ul>
 
 							</li>
@@ -1788,6 +1794,7 @@
 													<h4><strong>Topics of Interest</strong></h4>
 													<p>Topics of interest include, but are not limited to:
 
+													<ul>
 														<li>Foundations, algorithms, models, and theory of data mining,
 															including big data mining</li>
 														<li>Machine learning, deep learning, and statistical methods for
@@ -1813,6 +1820,7 @@
 															science, web, marketing,
 															finance, precision medicine, health informatics, and other
 															domains</li>
+													</ul>
 													</p>
 
 
@@ -1862,9 +1870,11 @@
 
 													<h4><strong>Important Dates</strong></h4>
 
+													<ul>
 													<li>Paper submission: June 6, 2025</li>
 													<li>Notification to authors: August 25, 2025</li>
 
+													</ul>
 													<p>All submission deadlines are end-of-day in the Anywhere on Earth
 														(AoE) time zone.
 													</p>
@@ -1982,6 +1992,7 @@
 														with area chairs and reviewers
 														to aid in the evaluation process. Authors are encouraged to
 
+													<ul>
 														<li>Include detailed technical information, such as proofs,
 															assumptions, and algorithm
 															pseudocode.
@@ -1992,6 +2003,7 @@
 															possible.</li>
 														<li>Make code and data publicly available when feasible.</li>
 
+														</ul>
 													</p>
 
 													<p>Reviewers will assess the reproducibility of the reported
