--- a/authorinstruction.html
+++ b/authorinstruction.html
@@ -1733,8 +1733,12 @@
 											<div class="header-content-container center">
 												<div class="header-content">
 
-													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Paper (Main Conference) and Video Submission
-													</h1>
+													<h1 class="et_pb_module_header">
+  Author Instructions for Camera-Ready Paper and Video Submission (Main Conference Papers)<br><br>
+  <span style="font-size: 0.6em; display: block; font-weight: normal;">
+    Note: Instructions for workshop and other papers will be updated soon
+  </span>
+</h1>
 
 													<div class="et_pb_header_content_wrapper"></div>
 
