--- a/authorinstruction.html
+++ b/authorinstruction.html
@@ -1733,12 +1733,9 @@
 											<div class="header-content-container center">
 												<div class="header-content">
 
-													<h1 class="et_pb_module_header">
-  Author Instructions for Camera-Ready Paper and Video Submission (Main Conference Papers)<br><br>
-  <span style="font-size: 0.6em; display: block; font-weight: normal;">
-    Note: Instructions for workshop and other papers will be updated soon
-  </span>
-</h1>
+													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Paper and Video Submission (Main Conference Papers)
+													</h1>
+													<h2 style="color: red;">Note: Instructions for workshop and other papers will be updated soon. </h2>
 
 													<div class="et_pb_header_content_wrapper"></div>
 
