Update website content

--- a/index.html
+++ b/index.html
@@ -1883,12 +1883,10 @@
                                                     style="line-height: 2.0; font-size: 16px; margin: 0; padding-left: 0; list-style-position: inside;">
                                                     <li style="margin-bottom: 14px;"><strong>Non-author early bird <a
                                                                 href="registration.html"
-                                                                target="_blank">registration</a> due: </strong>September
-                                                        24, 2025</li>
+                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <span style="color: red;">September 30, 2025</span></li>
                                                     <li style="margin-bottom: 14px;"><strong>Author <a
                                                                 href="registration.html"
-                                                                target="_blank">registration</a> due: </strong>September
-                                                        24, 2025</li>
+                                                                target="_blank">registration</a> due: </strong><del>September 24</del> <span style="color: red;">September 30, 2025</span></li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="cfp.html"
                                                                 target="_blank">Main conference</a> camera ready due:
                                                         </strong>September 25, 2025</li>
@@ -1943,11 +1941,16 @@
                                                         <li><a href="authorinstruction.html"
                                                                 target="_blank">Instrction for authors</a> has been posted. </li>
                                                         <li>
-                                                            Author and early bird registration deadline is September 24,
-                                                            2025.
+                                                            Author and early bird registration deadline is <del>September 24</del> <span style="color: red;">September 30, 2025</span>.
                                                             Please register <a href="registration.html"
                                                                 target="_blank">here</a>.
                                                         </li>
+
+                                                        <li>
+                                                            Discounted hotel reservation deadline: October 18, 2025.
+                                                            <a href=" https://book.passkey.com/go/IEEE25"
+                                                                target="_blank">Make your hotel reservation now</a>.
+                                                        </li>                                                        
                                                         <li>
                                                             Keynote speakers have been announced. Please check
                                                             <a href="keynotes.html" target="_blank">here</a>.
