--- a/registration.html
+++ b/registration.html
@@ -1793,7 +1793,7 @@
 
                                                     <h4><strong>Author Registration</strong></h4>
 
-                                                    <p><strong>Registration due September 24, 2025</strong></p>
+                                                    <p><strong>Registration due <del>September 24</del> <span style="color: red;">September 30, 2025</span></strong></p>
 
                                                     <table>
                                                         <tr>
