--- a/registration.html
+++ b/registration.html
@@ -1818,7 +1818,7 @@
                                                     <br>
 
                                                     <h4><strong>Non-Authors, or Co-Authors not registering a paper</strong></h4>
-                                                    <p><strong>Early-Bird due September 24, 2025</strong></p>
+                                                    <p><strong>Early-Bird due <del>September 24</del> <span style="color: red;">September 30, 2025</span></strong></p>
 
                                                     <table>
                                                         <tr>
