--- a/authorinstruction.html
+++ b/authorinstruction.html
@@ -1733,9 +1733,11 @@
 											<div class="header-content-container center">
 												<div class="header-content">
 
-													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Paper and Video Submission (Main Conference Papers)
+													<h1 class="et_pb_module_header">Author Instructions for Camera-Ready Papers and Video Submission (Main Conference Papers)
 													</h1>
-													<h2 style="color: red;">Note: Instructions for workshop and other papers will be updated soon. </h2>
+													<span style="color: red;">Note: Please follow <a href="authorinstruction-workshops.html">workshop paper instructions</a> for papers accepted
+														in <strong>Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, 
+												and the Undergraduate &amp; High School Symposium. </strong><span>
 
 													<div class="et_pb_header_content_wrapper"></div>
 
