--- a/cfw.html
+++ b/cfw.html
@@ -1658,12 +1658,6 @@
                                             Venue
                                         </a>
                                     </li>
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="authorinstruction.html"
-                                            >
-                                            Author Instructions
-                                        </a>
-                                    </li>
 								</ul>
 
 							</li>
@@ -1732,9 +1726,15 @@
 
                                                     <h1 class="et_pb_module_header">Call for Workshop Proposals</h1>
                                                     <br>
-                                                    <p>Accepted Workshops: <a href="https://www3.cs.stonybrook.edu/~icdm2025/workshops.html"
-                                                        target="_blank">https://www3.cs.stonybrook.edu/~icdm2025/workshops.html</a></p>
+                                                      <p><strong>Registration due: September 30, 2025</span></strong></p>
+                                                    <span style="color: red;">Note:</span> For each accepted paper, at least one author is required to pay a full author registration and attend the conference to present their work on site. Each conference or workshop paper requires separate full registration.
+                                                    <a href="registration.html" target="_blank">Register now</a>.
 
+                                                    <p><strong><a href="authorinstruction-workshops.html" target="_blank">Camera Ready Instructions for Workshop Papers</a>. Due: October 5, 2025.
+                                                    </strong></p>                                                    
+                                                    <p><strong>Accepted Workshops: <a href="https://www3.cs.stonybrook.edu/~icdm2025/workshops.html"
+                                                        target="_blank">https://www3.cs.stonybrook.edu/~icdm2025/workshops.html</a>
+                                                    </strong></p>
                                                     <div class="et_pb_header_content_wrapper"></div>
 
                                                 </div>
