--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@
                                                         </strong>September 25, 2025</li>
                                                     <li style="margin-bottom: 14px;"><strong><a href="cfw.html"
                                                                 target="_blank">Workshops</a> camera ready due:
-                                                        </strong>September 25, 2025</li>
+                                                        </strong><a href="authorinstruction-workshops.html">Check Here</a></li>
                                                     <li style="margin-bottom: 14px;"><strong><a
                                                                 href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html"
                                                                 target="_blank">Tao Li Award</a> submission due:
@@ -1938,8 +1938,12 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="authorinstruction-workshops.html"
+                                                                target="_blank">Author instructions for workshop papers (ICDMW 2025)</a> has been posted. Applicable to papers accepted in Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, and the Undergraduate & High School Symposium. </li>
+                                                        </li> 
+
                                                         <li><a href="authorinstruction.html"
-                                                                target="_blank">Instrction for authors</a> has been posted. </li>
+                                                                target="_blank">Author instructions for main conference camera ready papers (ICDM 2025) and video submission</a> has been posted. </li>
                                                         <li>
                                                             Author and early bird registration deadline is <del>September 24</del> <span style="color: red;">September 30, 2025</span>.
                                                             Please register <a href="registration.html"
