--- a/index.html
+++ b/index.html
@@ -1938,6 +1938,8 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+
+                                                        <li><a href="registration.html#student-travel-award">Student Travel Award Notice</a> has been posted. Please submit your application by <span style="color: red;">October 24, 2025</span></li>
                                                         <li><a href="authorinstruction-workshops.html"
                                                                 target="_blank">Author instructions for workshop papers (ICDMW 2025)</a> has been posted. Applicable to papers accepted in Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, and the Undergraduate & High School Symposium. </li>
                                                         </li> 
