--- a/registration.html
+++ b/registration.html
@@ -1877,7 +1877,7 @@
 
                                                     <br>
 
-                                                    <h4><strong>Student Travel Award</strong></h4>
+                                                    <h4 id="student-travel-award"><strong>Student Travel Award</strong></h4>
 
                                                     <p>Congratulations again on the acceptance of your papers! Thanks to
                                                         anticipated support from the National Science Foundation (NSF)
