--- a/authorinstruction-workshops.html
+++ b/authorinstruction-workshops.html
@@ -1659,10 +1659,17 @@
                                     </li>
 
 
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="authorinstruction.html"
                                             >
                                             Author Instructions
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="authorinstruction-workshops.html"
+                                            >
+                                            Workshop Author instructions
                                         </a>
                                     </li>
 
