--- a/authorinstruction.html
+++ b/authorinstruction.html
@@ -1666,6 +1666,13 @@
                                         </a>
                                     </li>
 
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction-workshops.html"
+                                            >
+                                            Workshop Author instructions
+                                        </a>
+                                    </li>
+
 
 								</ul>
 
