--- a/workshops.html
+++ b/workshops.html
@@ -1659,6 +1659,12 @@
                                             Author Instructions
                                         </a>
                                     </li>
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction-workshops.html"
+                                            >
+                                            Workshop Author instructions
+                                        </a>
+                                    </li>
 								</ul>
 
 							</li>
