--- a/cfw.html
+++ b/cfw.html
@@ -1658,6 +1658,18 @@
                                             Venue
                                         </a>
                                     </li>
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction.html"
+                                            >
+                                            Author Instructions
+                                        </a>
+                                    </li>
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction-workshops.html"
+                                            >
+                                            Workshop Author instructions
+                                        </a>
+                                    </li>
 								</ul>
 
 							</li>
