--- a/cft.html
+++ b/cft.html
@@ -1660,9 +1660,16 @@
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="authorinstruction.html"
+                                        <a href="authorinstruction_paper.html"
                                             >
-                                            Author Instructions
+                                            Paper Submission Instructions
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction_video.html"
+                                            >
+                                            Video Submission Instructions
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
