--- a/registration.html
+++ b/registration.html
@@ -1661,8 +1661,16 @@
                                     </li>
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="authorinstruction.html">
-                                            Author Instructions
+                                        <a href="authorinstruction_paper.html"
+                                            >
+                                            Paper Submission Instructions
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction_video.html"
+                                            >
+                                            Video Submission Instructions
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
