--- a/index.html
+++ b/index.html
@@ -1655,9 +1655,16 @@
                                         </a>
                                     </li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="authorinstruction.html"
+                                        <a href="authorinstruction_paper.html"
                                             >
-                                            Author Instructions
+                                            Paper Submission Instructions
+                                        </a>
+                                    </li>
+
+									<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="authorinstruction_video.html"
+                                            >
+                                            Video Submission Instructions
                                         </a>
                                     </li>
                                     
@@ -1951,7 +1958,7 @@
                                                                 target="_blank">Author instructions for workshop papers (ICDMW 2025)</a> has been posted. Applicable to papers accepted in Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, and the Undergraduate & High School Symposium. </li>
                                                         </li> 
 
-                                                        <li><a href="authorinstruction.html"
+                                                        <li><a href="authorinstruction_paper.html"
                                                                 target="_blank">Author instructions for main conference camera ready papers (ICDM 2025) and video submission</a> has been posted. </li>
                                                         <li>
                                                             Author and early bird registration deadline is <del>September 24</del> <span style="color: red;">September 30, 2025</span>.
