--- a/index.html
+++ b/index.html
@@ -1958,8 +1958,9 @@
                                                                 target="_blank">Author instructions for workshop papers (ICDMW 2025)</a> has been posted. Applicable to papers accepted in Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, and the Undergraduate & High School Symposium. </li>
                                                         </li> 
 
-                                                        <li><a href="authorinstruction_paper.html"
-                                                                target="_blank">Author instructions for main conference camera ready papers (ICDM 2025) and video submission</a> has been posted. </li>
+                                                        <li>Author instructions for main conference<a href="authorinstruction_paper.html"
+                                                                target="_blank"> camera ready papers (ICDM 2025)</a> and <a href="authorinstruction_video.html"
+                                                                target="_blank">video submission</a> has been posted. </li>
                                                         <li>
                                                             Author and early bird registration deadline is <del>September 24</del> <span style="color: red;">September 30, 2025</span>.
                                                             Please register <a href="registration.html"
