--- a/index.html
+++ b/index.html
@@ -1952,15 +1952,16 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="authorinstruction_video.html"
+                                                                target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before 20 October 2025.</li>
 
                                                         <li><a href="registration.html#student-travel-award">Student Travel Award Notice</a> has been posted. Please submit your application by <span style="color: red;">October 24, 2025</span></li>
                                                         <li><a href="authorinstruction-workshops.html"
                                                                 target="_blank">Author instructions for workshop papers (ICDMW 2025)</a> has been posted. Applicable to papers accepted in Workshops, Doctoral Forum, Demonstrations, BlueSky, REU Symposium, and the Undergraduate & High School Symposium. </li>
                                                         </li> 
 
-                                                        <li>Author instructions for main conference<a href="authorinstruction_paper.html"
-                                                                target="_blank"> camera ready papers (ICDM 2025)</a> and <a href="authorinstruction_video.html"
-                                                                target="_blank">video submission</a> has been posted. </li>
+                                                        <li><a href="authorinstruction_paper.html"
+                                                                target="_blank">Author instructions for main conference camera ready papers (ICDM 2025)</a> has been posted. </li>
                                                         <li>
                                                             Author and early bird registration deadline is <del>September 24</del> <span style="color: red;">September 30, 2025</span>.
                                                             Please register <a href="registration.html"
