--- a/index.html
+++ b/index.html
@@ -1953,7 +1953,7 @@
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
                                                         <li><a href="authorinstruction_video.html"
-                                                                target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before 20 October 2025.</li>
+                                                                target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before<span style="color: red;"> 20 October 2025</span>.</li>
 
                                                         <li><a href="registration.html#student-travel-award">Student Travel Award Notice</a> has been posted. Please submit your application by <span style="color: red;">October 24, 2025</span></li>
                                                         <li><a href="authorinstruction-workshops.html"
