--- a/keydates.html
+++ b/keydates.html
@@ -1786,7 +1786,7 @@
 
 														<li>Full paper submissions: <del>June 6, 2025</del></li>
 														<li>Notifications to authors: <del>August 25, 2025</del></li>
-														<li>Camera ready: September 25, 2025</li>
+														<li>Camera ready: <del>September 25, 2025</del></li>
 													</ul>
 
 													<h4><strong>Workshops</strong></h4>
@@ -1802,7 +1802,7 @@
 													<ul>
 
 														<li>Tutorial proposal due: <del>September 5, 2025</del></li>
-														<li>Notification: September 26, 2025</li>
+														<li>Notification: <del>September 26, 2025</del></li>
 
 													</ul>
 
@@ -1810,7 +1810,7 @@
 													<ul>
 
 														<li>Demo paper submission: <del>September 5, 2025</del></li>
-														<li>Notification to authors: September 19, 2025</li>
+														<li>Notification to authors: <del>September 19, 2025</del></li>
 														<li>Camera ready: October 5, 2025</li>
 													</ul>
 
@@ -1818,7 +1818,7 @@
 													<ul>
 
 														<li>Paper submission due date: <del>September 1, 2025</del></li>
-														<li>Decision notification: September 19, 2025</li>
+														<li>Decision notification: <del>September 19, 2025</del></li>
 														<li>Camera-ready due date: October 15, 2025</li>
 														<li>Symposium: one day in November 12-15, 2025</li>
 													</ul>
