--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3085,7 +3085,7 @@
                                                                 href="https://kaichunf.github.io/"
                                                                 target="_blank">Kaiqun Fu</h4>
                                                         <div>
-                                                            <p>South Dakota State U.</p>
+                                                            <p>Texas Christian University</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
