--- a/cffss.html
+++ b/cffss.html
@@ -1570,8 +1570,8 @@
                                         </a>
                                     </li>
 
-                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
-                                        <a href="https://www.cse.fau.edu/~xqzhu/taoliaward/icdm-tao-li-award.html"
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="cffss.html"
                                             style="display: block; min-width: 450px; padding: 10px 20px;"
                                             target="_blank">
                                             Call for ICDM Female Scholar/Student Award
