--- a/cfw.html
+++ b/cfw.html
@@ -1501,7 +1501,7 @@
                             <li
                                 class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-704 current_page_item menu-item-has-children menu-item-705">
                                 <a href="index.html" aria-current="page">Calls</a>
-                                <ul class="sub-menu" style="min-width: 400px;">
+                                <ul class="sub-menu" style="min-width: 450px;">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cfp.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
@@ -1573,6 +1573,14 @@
                                     </li>
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="cffss.html"
+                                            style="display: block; min-width: 450px; padding: 10px 20px;"
+                                            target="_blank">
+                                            Call for ICDM Female Scholar/Student Award
+                                        </a>
+                                    </li>
+
+                                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://bigdatareu.umbc.edu/reu-symposium/reu-symposium-2025/"
 										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
 											REU Symposium 2025
@@ -1580,7 +1588,7 @@
 									</li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
 										<a href="https://2025-icdm-ughs.github.io/"
-										   style="display: block; min-width: 350px; padding: 10px 20px;" target="_blank">
+										   style="display: block; min-width: 450px; padding: 10px 20px;" target="_blank">
 										   Undergraduate and High School Symposium
 										</a>
 									</li>
