--- a/cffss.html
+++ b/cffss.html
@@ -1504,7 +1504,7 @@
                                 <a href="index.html" aria-current="page">Calls</a>
                                 <ul class="sub-menu" style="min-width: 450px;">
                                     <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="cfp.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Call for Papers
