--- a/cffss.html
+++ b/cffss.html
@@ -1572,8 +1572,7 @@
 
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
                                         <a href="cffss.html"
-                                            style="display: block; min-width: 450px; padding: 10px 20px;"
-                                            target="_blank">
+                                            style="display: block; min-width: 450px; padding: 10px 20px;">
                                             Call for ICDM Female Scholar/Student Award
                                         </a>
                                     </li>
