--- a/index.html
+++ b/index.html
@@ -1960,6 +1960,7 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="cffss.html" target="_blank">Call for ICDM Female Scholar/Student Award </a>has been posted. The nomination deadline is October 24th.</li>
                                                         <li><a href="authorinstruction_video.html"
                                                                 target="_blank">Video Submission Instructions</a> have been posted. ALL pre-recorded presentations must be uploaded before<span style="color: red;"> 20 October 2025</span>.</li>
 
