--- a/keydates.html
+++ b/keydates.html
@@ -1802,7 +1802,7 @@
 														<li>Workshop proposals deadline: <del>March 14, 2025</del></li>
 														<li>Workshop proposals notification: <del> April 11, 2025</del></li>
 														<li>Workshop paper submission deadline: <del>September 1, 2025</del></li>
-														<li>Camera ready: Saturday, October 5, 2025</li>
+														<li>Camera ready: <del>Saturday, October 5, 2025</del></li>
 													</ul>
 
 													<h4><strong>Tutorials</strong></h4>
@@ -1818,7 +1818,7 @@
 
 														<li>Demo paper submission: <del>September 5, 2025</del></li>
 														<li>Notification to authors: <del>September 19, 2025</del></li>
-														<li>Camera ready: October 5, 2025</li>
+														<li>Camera ready: <del>October 5, 2025</del></li>
 													</ul>
 
 													<h4><strong>REU Symposium</strong></h4>
@@ -1834,7 +1834,7 @@
 													<ul>
 
 														<li>Paper Submission Deadline: <del>September 1, 2025</del></li>
-														<li>Notification of Acceptance: October 1, 2025</li>
+														<li>Notification of Acceptance: <del>October 1, 2025</del></li>
 														<li>Camera-Ready Paper Submission: October 15, 2025</li>
 														<li>Symposium Date: November 15, 2025</li>
 													</ul>
@@ -1843,7 +1843,7 @@
 													<ul>
 
 														<li>Paper Submission Deadline: <del>August 1, 2025</del></li>
-														<li>Notification of Acceptance: September 30, 2025</li>
+														<li>Notification of Acceptance: <del>September 30, 2025</del></li>
 														<li>Camera-Ready Paper Submission: October 15, 2025</li>
 													</ul>
 
