--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -3982,7 +3982,7 @@
                                     </div>
 
 
-                                    <!-- Proceedings chairs -->
+                                    <!-- Proceedings Chairs -->
                                      <div class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular">
                                         <div class="et_pb_row et_pb_row_4">
                                             <div
@@ -3990,7 +3990,7 @@
                                                 <div
                                                     class="et_pb_module et_pb_text et_pb_text_2 et_pb_text_align_left et_pb_bg_layout_light">
                                                     <div class="et_pb_text_inner">
-                                                        <h2 style="text-align: center;">Proceedings chairs</h2>
+                                                        <h2 style="text-align: center;">Proceedings Chairs</h2>
                                                     </div>
                                                 </div>
                                             </div>
@@ -4021,7 +4021,7 @@
                                                                 href="https://yhe15.people.wm.edu/" target="_blank">Yi He</h4>
 
                                                         <div>
-                                                            <p>William & Mary</p>
+                                                            <p>College of William & Mary</p>
                                                         </div></a>
 
                                                     </div>
