更新导航栏

--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -1491,6 +1491,12 @@
                                             style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
                                             Committee</a>
                                     </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                        <a href="pcmemberlist.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">PC Member
+                                            List</a>
+                                    </li>
                                     <!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1631"><a href="achairs-pcommittee/index.html">Area Chairs and Program Committee</a></li>-->
                                 </ul>
                             </li>
