--- a/icdm_registration.html
+++ b/icdm_registration.html
@@ -1499,6 +1499,12 @@
 											style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
 											Committee</a>
 									</li>
+									 <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                        <a href="pcmemberlist.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">PC Member
+                                            List</a>
+                                    </li>
 									<!--<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1631"><a href="achairs-pcommittee/index.html">Area Chairs and Program Committee</a></li>-->
 								</ul>
 							</li>
@@ -1607,6 +1613,13 @@
                                         <a href="keynotes.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Keynotes
+                                        </a>
+                                    </li>
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="acceptedpapers.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Accepted Papers
                                         </a>
                                     </li>
 
