--- a/pcmemberlist.html
+++ b/pcmemberlist.html
@@ -1633,6 +1633,13 @@
                                             Keynotes
                                         </a>
                                     </li>
+                                    <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="acceptedpapers.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Accepted Papers
+                                        </a>
+                                    </li>
 
                                 </ul>
 
