--- a/sponsors.html
+++ b/sponsors.html
@@ -1491,6 +1491,12 @@
                                             style="white-space: nowrap; display: block; padding: 10px 20px;">Organizing
                                             Committee</a>
                                     </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1633">
+                                        <a href="pcmemberlist.html"
+                                            style="white-space: nowrap; display: block; padding: 10px 20px;">PC Member
+                                            List</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-512"><a
@@ -1621,6 +1627,13 @@
                                         <a href="keynotes.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Keynotes
+                                        </a>
+                                    </li>
+                                    <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="acceptedpapers.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            Accepted Papers
                                         </a>
                                     </li>
 
