--- a/cffss.html
+++ b/cffss.html
@@ -1811,8 +1811,7 @@
                                                         quality and promise, encouraging and supporting the next
                                                         generation of female data scientists.</p>
 
-                                                    <p>Each award carries a prize of $1,000, and only one person will be
-                                                        selected for each. The evaluation for these awards will be
+                                                    <p>Each award carries a prize of $1,000. The evaluation for these awards will be
                                                         determined through nominations and voting by the “Women Award
                                                         Committee”.</p>
 
