--- a/acceptedpapers.html
+++ b/acceptedpapers.html
@@ -1853,7 +1853,7 @@
                                                                     Learning for Generic Spatial-Temporal
                                                                     Representations</td>
                                                                 <td style="border: 1px solid #ddd; padding: 10px;">
-                                                                    Yuhang Liu (The State University of New York at Binghamton), Yingxue Zhang (Binghamton University), Xin Zhang (San Diego State University), Yu Yang (Lehigh University), Yanhua Li (Worcester Polytechnic Institute) and Jun Luo (Logistics and Supply Chain MultiTech R&D Centre)/td>
+                                                                    Yuhang Liu (The State University of New York at Binghamton), Yingxue Zhang (Binghamton University), Xin Zhang (San Diego State University), Yu Yang (Lehigh University), Yanhua Li (Worcester Polytechnic Institute) and Jun Luo (Logistics and Supply Chain MultiTech R&D Centre)</td>
                                                                 <td
                                                                     style="border: 1px solid #ddd; padding: 10px; text-align: center;">
                                                                     Yes</td>
