--- a/pcmemberlist.html
+++ b/pcmemberlist.html
@@ -746,6 +746,18 @@
 <link rel="alternate" type="text/xml+oembed" href="wp-json/oembed/1.0/embedb725?url=https%3A%2F%2Ficdm2025.auckland.ac.nz%2F&amp;format=xml" />
 -->
 
+<style>
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+/* #列不换行 */
+th:nth-child(1), td:nth-child(1) {
+    white-space: nowrap;
+    
+}
+</style>
     <style>
         contact {
             color: #000000;
@@ -1800,7 +1812,7 @@
 
 
                                                     <div
-                                                        style="max-height: 410px; overflow: auto; border: 1px solid #ddd;">
+                                                        style="max-height: 600px; overflow: auto; border: 1px solid #ddd;">
                                                         <table
                                                             style="width: 100%; border-collapse: collapse; table-layout: fixed; font-family: Arial, sans-serif;">
                                                             <thead>
@@ -2469,7 +2481,7 @@
 
 
                                                     <div
-                                                        style="max-height: 410px; overflow: auto; border: 1px solid #ddd;">
+                                                        style="max-height: 1200px; overflow: auto; border: 1px solid #ddd;">
                                                         <table
                                                             style="width: 100%; border-collapse: collapse; table-layout: fixed; font-family: Arial, sans-serif;">
                                                             <thead>
